--- a/Dark Theme/version-beta-v1.css
+++ b/Dark Theme/version-beta-v1.css
@@ -136,6 +136,8 @@ body .fade {
     color: #5899c7; 
 }
 
+/*Part 3 (Main: Student Dashboard)*/
+
 .action-tip-user-photo-wrapper img {
     filter: brightness(0.065);
 }
